--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -14,11 +14,16 @@ frontend http
 
 frontend https
   bind *:443 ssl crt /certs
-  default_backend foodsoft
+
+  default_backend foodsoft_web
+  acl sharedlists_path path_beg /sharedlists
+  use_backend sharedlists_web if sharedlists_path
 
   http-response set-header Strict-Transport-Security "max-age=16000000;"
   option forwardfor
   reqadd X-Forwarded-Proto:\ https
 
-backend foodsoft
-  server foodsoft foodsoft:3000
+backend foodsoft_web
+  server foodsoft_web foodsoft_web:3000
+backend sharedlists_web
+  server sharedlists_web sharedlists_web:3000
