--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,4 +1,6 @@
-FROM haproxy:1.7
+FROM haproxy:1.7-alpine
 
 COPY haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
-#COPY certificate.pem /certs
+COPY start.sh trigger.sh /
+
+CMD ["/start.sh"]
