--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,16 +10,22 @@ global
 
 frontend http
   bind *:80
-  redirect scheme https code 301
+
+  acl acme_path path_beg -i /.well-known/acme-challenge
+  use_backend acme if acme_path
+
+  redirect scheme https code 301 unless acme_path
 
 frontend https
-  bind *:443 ssl crt /certs
+  bind *:443 ssl crt /certs/certs
 
   default_backend foodsoft_web
+
   acl sharedlists_path path_beg /sharedlists
   use_backend sharedlists_web if sharedlists_path
 
   http-response set-header Strict-Transport-Security "max-age=16000000;"
+  http-response set-header X-Frame-Options "DENY"
   option forwardfor
   reqadd X-Forwarded-Proto:\ https
 
@@ -27,3 +33,5 @@ backend foodsoft_web
   server foodsoft_web foodsoft_web:3000
 backend sharedlists_web
   server sharedlists_web sharedlists_web:3000
+backend acme
+  server acme acme:80
