--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,4 +1,3 @@
-FROM haproxy:1.7
+FROM foodcoops/haproxy:latest
 
 COPY haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
-#COPY certificate.pem /certs
