--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,7 +10,8 @@ global
 
 frontend http
   bind *:80
-  redirect scheme https code 301
+  default_backend certbot
+  redirect scheme https code 301 unless { path_beg /.well-known/acme-challenge }
 
 frontend https
   bind *:443 ssl crt /certs
@@ -23,6 +24,8 @@ frontend https
   option forwardfor
   reqadd X-Forwarded-Proto:\ https
 
+backend certbot
+  server certbot certbot:80
 backend foodsoft
   server foodsoft foodsoft:3000
 backend sharedlists
