--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY_BASE=${FOODSOFT_SECRET_KEY_BASE}
       - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
+      - MAILER_PREFIX=foodsoft+
       - SMTP_DOMAIN=app.${DOMAIN}
       - SMTP_ADDRESS
       - SMTP_PORT
@@ -39,6 +40,13 @@ services:
   foodsoft_worker:
     extends: foodsoft
     command: ./proc-start worker
+
+  foodsoft_smtp:
+    extends: foodsoft
+    command: ./proc-start mail
+    environment:
+      - SMTP_SERVER_PORT=2525
+      - SMTP_SERVER_HOST=0.0.0.0
 
   haproxy:
     build: haproxy
@@ -78,12 +86,30 @@ services:
       - DATABASE_URL=mysql2://sharedlists:${SHAREDLISTS_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
       - SECRET_TOKEN=${SHAREDLISTS_SECRET_KEY_BASE}
       - RAILS_RELATIVE_URL_ROOT=/sharedlists
+      - MAILER_DOMAIN=app.${DOMAIN}
+      - MAILER_PREFIX=sharedlists+
     volumes:
       - supplier_assets:/usr/src/app/supplier_assets
 
   sharedlists_cron:
     extends: sharedlists
     command: ./proc-start cron
+
+  sharedlists_smtp:
+    extends: sharedlists
+    command: ./proc-start mail
+    environment:
+      - SMTP_SERVER_PORT=2525
+      - SMTP_SERVER_HOST=0.0.0.0
+
+  smtp:
+    build: smtp
+    restart: always
+    environment:
+      - DOMAIN=app.${DOMAIN}
+      - HOSTNAME=app.${DOMAIN}
+    ports:
+      - "25:25"
 
 volumes:
   certs:
