--- a/smtp/Dockerfile
+++ b/smtp/Dockerfile
@@ -4,9 +4,8 @@ RUN apk add --no-cache postfix rsyslog
 
 COPY rsyslog.conf /etc/
 COPY main.cf /etc/postfix/
+COPY docker-entrypoint.sh reload-postfix.sh /
 
-CMD rm -f /var/run/rsyslogd.pid && \
-    /usr/sbin/postconf -e "mydomain=${DOMAIN}" && \
-    /usr/sbin/postconf -e "myhostname=${HOSTNAME}" && \
-    /usr/lib/postfix/master & \
+ENTRYPOINT ["/docker-entrypoint.sh"]
+CMD /usr/lib/postfix/master & \
     /usr/sbin/rsyslogd -n
