--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
     build: foodsoft
     restart: always
     environment:
-      - DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/foodsoft_demo?encoding=utf8mb4
+      - DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/foodsoft_demo?encoding=utf8mb4&collation=utf8mb4_unicode_520_ci
       - EMAIL_SENDER=noreply@${DOMAIN}
       #- ERROR_RECIPIENTS=
       - HOSTNAME=app.${DOMAIN}
       - QUEUE=foodsoft_notifier
       - REDIS_URL=redis://redis:6379
       - SECRET_KEY_BASE=${FOODSOFT_SECRET_KEY_BASE}
-      - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
+      - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft:${FOODSOFT_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4&collation=utf8mb4_unicode_520_ci
       - MAILER_PREFIX=foodsoft+
       - SMTP_DOMAIN=app.${DOMAIN}
       - SMTP_ADDRESS
@@ -49,18 +49,18 @@ services:
       - SMTP_SERVER_PORT=2525
       - SMTP_SERVER_HOST=0.0.0.0
 
-#  foodsoft_latest:
-#    build: foodsoft-latest
-#    restart: always
-#    environment:
-#      - DATABASE_URL=mysql2://foodsoft_latest:${FOODSOFT_LATEST_DB_PASSWORD}@mariadb/foodsoft_latest?encoding=utf8mb4
-#      - EMAIL_SENDER=noreply@${DOMAIN}
-#      - HOSTNAME=app.${DOMAIN}
-#      - QUEUE=foodsoft_latest_notifier
-#      - REDIS_URL=redis://redis:6379
-#      - SECRET_KEY_BASE=${FOODSOFT_LATEST_SECRET_KEY_BASE}
-#      - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft_latest:${FOODSOFT_LATEST_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
-#      - RAILS_RELATIVE_URL_ROOT=/latest
+  foodsoft_latest:
+    build: foodsoft-latest
+    restart: always
+    environment:
+      - DATABASE_URL=mysql2://foodsoft_latest:${FOODSOFT_LATEST_DB_PASSWORD}@mariadb/foodsoft_latest?encoding=utf8mb4&collation=utf8mb4_unicode_520_ci
+      - EMAIL_SENDER=noreply@${DOMAIN}
+      - HOSTNAME=app.${DOMAIN}
+      - QUEUE=foodsoft_latest_notifier
+      - REDIS_URL=redis://redis:6379
+      - SECRET_KEY_BASE=${FOODSOFT_LATEST_SECRET_KEY_BASE}
+      - SHAREDLISTS_DATABASE_URL=mysql2://foodsoft_latest:${FOODSOFT_LATEST_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4&collation=utf8mb4_unicode_520_ci
+      - RAILS_RELATIVE_URL_ROOT=/latest
 
   haproxy:
     build: haproxy
@@ -79,8 +79,13 @@ services:
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD
+      - FOODSOFT_DB_PASSWORD # setup only
+      - FOODSOFT_LATEST_DB_PASSWORD # setup only
+      - SHAREDLISTS_DB_PASSWORD # setup only
     volumes:
       - mariadb:/var/lib/mysql
+      - ./mariadb/root-bin:/root/bin
+      - ./mariadb/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d # setup only
 
 #  phpmyadmin:
 #    image: phpmyadmin/phpmyadmin
@@ -97,7 +102,7 @@ services:
     image: foodcoops/sharedlists:latest
     restart: always
     environment:
-      - DATABASE_URL=mysql2://sharedlists:${SHAREDLISTS_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4
+      - DATABASE_URL=mysql2://sharedlists:${SHAREDLISTS_DB_PASSWORD}@mariadb/sharedlists?encoding=utf8mb4&collation=utf8mb4_unicode_520_ci
       - SECRET_TOKEN=${SHAREDLISTS_SECRET_KEY_BASE}
       - RAILS_RELATIVE_URL_ROOT=/sharedlists
       - MAILER_DOMAIN=app.${DOMAIN}
